--- a/HelpDesk/package.json
+++ b/HelpDesk/package.json
@@ -29,6 +29,7 @@
     "consolidate": "^0.14.1",
     "express": "^4.14.0",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^5.4.1",
     "mongodb": "^2.2.6",
     "mongojs": "^2.4.0",
     "mongoose": "^4.5.9",
